created table in html and css

--- a/index.html
+++ b/index.html
@@ -45,6 +45,62 @@
           </button>
         </div>
       </header>
+
+      <table>
+        <thead>
+          <tr>
+            <th>Usuário</th>
+            <th>Repositories</th>
+            <th>Followers</th>
+            <th>Ação</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td class="user">
+              <img
+                src="https://github.com/jairtorezone.png"
+                alt="Imagem do Jair"
+              />
+              <a href="https://github.com/jairtorezone" target="_blank">
+                <p>Jair Torezone</p>
+                <span>/jairTorezone</span>
+              </a>
+            </td>
+            <td class="repository">123</td>
+            <td class="followers">1234</td>
+            <td class="action">
+              <button class="remove">Remover</button>
+            </td>
+          </tr>
+          <tr>
+            <td class="user">
+              <img
+                src="https://github.com/jtribeiro.png"
+                alt="Imagem do Jair"
+              />
+              <a href="https://github.com/jairtorezone" target="_blank">
+                <p>Josias Torezone</p>
+                <span>/jtRibeiro</span>
+              </a>
+            </td>
+            <td class="repository">123</td>
+            <td class="followers">1234</td>
+            <td class="action">
+              <button class="remove">Remover</button>
+            </td>
+          </tr>
+          <tr class="hide">
+            <td colspan="4" class="table-empty">
+              <div>
+                <img src="./assets/img/Estrela.svg" alt="" />
+                <p>Nenhum favorito ainda</p>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
