created classes js, Main, Favorites and FavoritesView

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <script type="module" src="./js/main.js" defer></script>
   </head>
   <body>
     <div id="app">
@@ -74,6 +76,7 @@
               <button class="remove">Remover</button>
             </td>
           </tr>
+
           <tr>
             <td class="user">
               <img
@@ -91,7 +94,8 @@
               <button class="remove">Remover</button>
             </td>
           </tr>
-          <tr class="hide">
+
+          <tr class="">
             <td colspan="4" class="table-empty">
               <div>
                 <img src="./assets/img/Estrela.svg" alt="" />
